frontend: added bow.min.js to the frontend page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bag of Words with D3.js</title>
+    <title>Bag of Words with Loom</title>
+    <script src="https://cdn.jsdelivr.net/gh/nturing/loom@0.0.0.1-alpha/frontend/assets/js/bow.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
         .bar {
